--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <form name="loginForm" id="login" method="post" >
         <p>
-            <label class="stepcount" for="username">Email Address</label><br>
-            <input class="stepcount" type="text" id="username" name="username" size="25" onchange="setusername()" required >
+            <label class="stepcount" for="phonenumber">Phone Number</label><br>
+            <input class="stepcount" type="text" id="phonenumber" name="phonenumber" size="25" onchange="setusername()" required >
         </p>
         <p>
             <label class="stepcount" for="password">Password</span></label><br>
